plugins {
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.reactivespring'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.compilerArgs += [
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
				'--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
    ]
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//validator
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

	//lombok
	// compileOnly 'org.projectlombok:lombok'
	// annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.11.0'
	testImplementation 'io.projectreactor:reactor-test'
}

sourceSets{
	test {
		java.srcDirs = ['src/test/java/unit', 'src/test/java/intg']
	}
}

test {
	useJUnitPlatform()
}
